[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/FFFFORWA.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Music/sweep.wav" type="AudioStream" id=2]
[ext_resource path="res://Music/Fluffing-a-Duck.mp3" type="AudioStream" id=3]
[ext_resource path="res://Music/win.mp3" type="AudioStream" id=4]
[ext_resource path="res://Music/trrrrrrrrr.wav" type="AudioStream" id=5]
[ext_resource path="res://Tasks/Task1/world.gd" type="Script" id=6]
[ext_resource path="res://Tasks/Task1/Cup.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tasks/Task1/assets/Background/EntryBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/black_filter.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[node name="world" type="Node2D"]
script = ExtResource( 6 )

[node name="ColorRectBack" type="ColorRect" parent="."]
margin_right = 1932.0
margin_bottom = 1080.0
color = Color( 0.498039, 0.411765, 0.686275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1932.0
margin_bottom = 1080.0
color = Color( 0.866667, 0.662745, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock" type="Label" parent="."]
margin_right = 113.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="cupsSet" type="YSort" parent="."]
position = Vector2( 440, 160 )

[node name="Cup1" parent="cupsSet" instance=ExtResource( 7 )]
position = Vector2( 150, 335 )
scale = Vector2( 0.7, 0.7 )

[node name="Cup2" parent="cupsSet" instance=ExtResource( 7 )]
position = Vector2( 800, 335 )
scale = Vector2( 0.7, 0.7 )

[node name="Cup3" parent="cupsSet" instance=ExtResource( 7 )]
position = Vector2( 470, 150 )
scale = Vector2( 0.7, 0.7 )

[node name="Cup4" parent="cupsSet" instance=ExtResource( 7 )]
position = Vector2( 470, 600 )
scale = Vector2( 0.7, 0.7 )

[node name="secondTimer" type="Timer" parent="."]

[node name="startLabel" type="Label" parent="."]
margin_left = 590.0
margin_top = 400.0
margin_right = 1326.0
margin_bottom = 643.0
custom_fonts/font = SubResource( 2 )
text = "Shuffle"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coinPosition" type="Position2D" parent="."]
position = Vector2( 910, 135 )

[node name="EntryBackground" parent="." instance=ExtResource( 8 )]
z_index = 2

[node name="swipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ReferenceRect" type="ReferenceRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.239216, 0.247059, 0.239216, 1 )
border_width = 50.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="secondTimer" to="." method="_on_secondTimer_timeout"]
